--- a/src/index.html
+++ b/src/index.html
@@ -12,28 +12,29 @@ title: Használt Autó Fotózás Budapest
 			<article class="hero__text">
 				<h1 class="hero__h1">Használt Autó Fotózás Budapesten</h1>
 				<p class="hero__title h1">
-					<span class="hero__title-text">Add el az autódat</span>
-					<span id="js-benefits" class="hero__highlight hero__highlight--blink"></span>
+					<span class="hero__title-text">Nem sikerül eladni az autódat?</span>
+					<span class="hero__highlight">A profi fotók eladják helyetted.</span>
 				</p>
-				<ul class="checklist hero__checklist">
-					<li>
-						<i class="checklist__icon fas fa-check-circle"></i>
-						Egy óra alatt kész vagyunk
+				<p class="hero__text">Ennyire egyszerű a folyamat:</p>
+				<ol class="checklist">
+					<li class="checklist__item">
+						<strong class="checklist__subtitle">Időpontot egyeztetünk</strong>
+						rugalmasan, már akár aznapra
 					</li>
-					<li>
-						<i class="checklist__icon fas fa-check-circle"></i>
-						12 gyönyörű fotót kapsz, még aznap
+					<li class="checklist__item">
+						<strong class="checklist__subtitle">Lefotózom az autódat</strong>
+						30–60 perc alatt, minden részletre figyelve
 					</li>
-					<li>
-						<i class="checklist__icon fas fa-check-circle"></i>
-						Hirdetéshez optimalizált méret és minőség
+					<li class="checklist__item">
+						<strong class="checklist__subtitle">Még aznap megkapod a képeket,</strong>
+						amiket feltölthetsz a hirdetésedhez
 					</li>
-					<li>
-						<i class="checklist__icon fas fa-check-circle"></i>
-						<strong class="text-light">Gyorsabb eladás, kevesebb stressz</strong>
+					<li class="checklist__item">
+						<strong class="checklist__subtitle">Az autód végre kitűnik a tömegből,</strong>
+						és végre jönnek az érdeklődők
 					</li>
-				</ul>
-				<a class="hero__button btn" href="#miert">Íme a Részletek</a>
+				</ol>
+				<a class="hero__button btn" href="#miert">Hogyan működik?</a>
 			</article>
 			<aside>
 				<div id="slider" class="slider" role="region" aria-roledescription="carousel" aria-label="Használt Autó Fotózás slider">
@@ -79,33 +80,50 @@ title: Használt Autó Fotózás Budapest
 		</div>
 	</header>
 
+	<section class="section about">
+		<div class="container">
+			<details class="about__grid">
+				<summary class="about__summary">
+					<img class="about__image" src="/assets/images/roland.webp" alt="Szia, Roland vagyok, én leszek a fotósod. 🤗" title="Szia, Roland vagyok, én leszek a fotósod. 🤗">
+					<h2 class="about__title h4">Szia, Roland vagyok. Én leszek a fotósod.</h2>
+					<p class="about__text">Nem akarom elvenni a lényeget az autókról, de ha meg akarsz ismerni, kattints ide.</p>
+				</summary>
+				<div class="about__content">
+					<p>Több mint öt éve fotózom autókat. Eleinte csak hobbinak indult, aztán rájöttem, hogy ebből valami komolyabb is lehet. Azóta rengeteg autót láttam, de mindegyiket úgy fotózom, mintha a sajátom lenne. Nem csak technikailag, hanem hozzáállásban is.</p>
+					<p>Az elmúlt években sokat foglalkoztam azzal, hogyan viselkednek a vevők online — mit keresnek, hova néznek először, mi az, ami kattintásra ösztönöz. Ezeket a tapasztalatokat beépítem minden fotózásba.</p>
+					<p>Szeretem, ha az autó karaktere kijön a képeken, és ha a tulajdonos is újra beleszeret, mielőtt eladja. Szóval ha együtt dolgozunk, nem csak profi autós képeket kapsz, hanem egy olyan hozzáállást is, ami tényleg segít eladni az autódat.</p>
+				</div>
+			</details>
+		</div>
+	</section>
+
 	<section id="miert" class="section section--light">
 		<div class="container">
-			<h2 class="section__title">Miért éri meg profi fotókkal hirdetni az autód?</h2>
+			<h2 class="section__title">Miért viszik el hamarabb a profin fotózott autókat?</h2>
 			<div class="why-grid">
 				<div class="card">
 					<i class="card__icon fas fa-clock"></i>
-					<h3 class="card__title">Hamarabb elviszik</h3>
-					<p class="card__text">A vevők először a képeket nézik, és csak utána olvassák el a hirdetést. Ha a fotóid profik, többen kattintanak a hirdetésedre, és hamarabb találsz komoly érdeklődőt.</p>
+					<h3 class="card__title">Elsőre beleszeretnek az autódba</h3>
+					<p class="card__text">A vevők először a képeket nézik. Ha a fotóid profik, az autód már azelőtt kiemelkedik a találatok közül, hogy bármit elolvasnának. Innentől pedig gyorsabb az eladás is.</p>
 				</div>
 				<div class="card">
 					<i class="card__icon fas fa-money-bill-trend-up"></i>
-					<h3 class="card__title">Több pénzt kapsz érte</h3>
-					<p class="card__text">Egy gondosan fotózott autó jobban karbantartottnak tűnik, ezért a vevő kevesebbet fog alkudni. Gyakran már az első érdeklődő megadja azt az árat, amit kérsz.</p>
+					<h3 class="card__title">Többet adnak érte, mert megbíznak benned</h3>
+					<p class="card__text">Egy igényesen fotózott autó rendezettnek és jól karbantartottnak tűnik. Az ilyen hirdetésből a vevő azt érzi, hogy az eladó is korrekt, és könnyebben elfogadja az árat, amit kérsz.</p>
 				</div>
 				<div class="card">
 					<i class="card__icon fas fa-couch"></i>
-					<h3 class="card__title">Stresszmentesen adod el</h3>
-					<p class="card__text">Nem kell várnod és feleslegesen köröznöd érdeklődőkkel. A profi képek miatt hamarabb jön a komoly vevő, és stressz nélkül adhatod el az autód.</p>
+					<h3 class="card__title">Kevesebb várakozás, több komoly vevő</h3>
+					<p class="card__text">Nem kell heteket várnod érdeklődőkre és megszűnnek a felesleges körök. A profi fotók megszűrik a komolytalan érdeklődőket, így gyorsabban találsz valódi vevőt.</p>
 				</div>
 				<div class="card">
 					<i class="card__icon fas fa-crosshairs"></i>
-					<h3 class="card__title">Kitűnsz a többiek közül</h3>
-					<p class="card__text">Mindegy, hogy tömegautód vagy ritkaságod van, a hirdetésed kiemelkedik a sokezer közül. A vevő arra a hirdetésre kattint, ami szemet gyönyörködtető képekkel kezdődik.</p>
+					<h3 class="card__title">A te hirdetésedre kattintanak először</h3>
+					<p class="card__text">Mindegy, hogy Corollád vagy Corvette-ed van, ha a képeid profik, az autód hirdetése kitűnik a többi telefonos kép közül. A vevők figyelme oda irányul, ahol a minőséget látják.</p>
 				</div>
 			</div>
 			<div class="callout">
-				<p class="callout__text">Ha eddig eljutottál, biztosan érdekel, mennyibe kerül. Nos, jó hírem van: olcsóbb, mint gondolnád!</p>
+				<p class="callout__text">Meglepően elérhető ahhoz képest, mennyit hoz. Egy apró befektetés, ami sokszorosan megtérül.</p>
 				<a class="callout__button btn" href="#arak">Mennyibe kerül?</a>
 			</div>
 		</div>
@@ -113,10 +131,11 @@ title: Használt Autó Fotózás Budapest
 
 	<section id="arak" class="section">
 		<div class="container">
-			<h2 class="section__title">Mennyibe kerül a profi használt autó fotózás?</h2>
+			<h2 class="section__title">A legjobb befektetés, amit az autódért tehetsz eladás előtt</h2>
+			<p class="mb-3">Mindenki bizonytalan volt az első fotózás előtt, aztán jók meglepődtek, amikor gyorsabban eladták.</p>
 			<article class="plan plan--basic">
 				<div class="plan__text">
-					<h3 class="plan__name">Használt Autó Fotózás</h3>
+					<h3 class="plan__name">Profi Használt Autó Fotózás</h3>
 					<ul class="checklist">
 						<li>
 							<i class="checklist__icon fas fa-check-circle"></i>
@@ -135,16 +154,16 @@ title: Használt Autó Fotózás Budapest
 							Gyorsabb, stresszmentesebb eladás
 						</li>
 					</ul>
-					<p class="plan__price plan__price--old h3"><del>35.000 Ft</del></p>
 					<span class="label">Őszi akció! 🍂</span>
 					<p class="plan__price plan__price--new h1"><ins>29.990 Ft</ins></p>
-					<p class="plan__disclaimer"><strong class="text-light">Neked csak annyit kell tenned, hogy tisztán hozod az autót.</strong> A többit én intézem, egy óra alatt végzünk is bőven.</p>
+					<p><strong class="text-light">A legkisebb befektetés, ami a legtöbbet hozza az autód eladásából.</strong></p>
+					<p class="plan__disclaimer">Ennyi az egész: hozd el tisztán az autót, a többit én intézem. Egy óra alatt meg is vagyunk a fotózással, és már aznap hirdetheted is az autódat az új képekkel.</p>
 				</div>
 				<img class="plan__photo" src="/assets/images/plan-photo.webp" alt="Használt Autó Fotózás" width="1000" height="667" loading="lazy" fetchpriority="low" decoding="async">
 			</article>
 			<p class="for-dealers"><strong>Autókereskedőknek is!</strong><br> Profi fotókkal gyorsabban forog a készlet, erősebb a bizalom, és több autó fotózására mennyiségi kedvezményt adok.</p>
 			<div class="button-and-link">
-				<a class="btn" href="#kapcsolat">Erre van szükségem</a>
+				<a class="btn" href="#kapcsolat">Visszahívást kérek</a>
 				<a href="#velemenyek">Tovább olvasok még</a>
 			</div>
 		</div>
@@ -152,7 +171,7 @@ title: Használt Autó Fotózás Budapest
 
 	<section id="velemenyek" class="section section--light">
 		<div class="container">
-			<h2 class="section__title">Ügyfeleim mondták</h2>
+			<h2 class="section__title">Ők már eladták. Te még gondolkodsz?</h2>
 			<div class="quotes">
 				{% for item in testimonials %}
 					<article class="quote">
@@ -175,13 +194,14 @@ title: Használt Autó Fotózás Budapest
 					</article>
 				{% endfor %}
 			</div>
+			<p><a href="#kapcsolat">Töltsd ki az űrlapot</a>, és nézzük meg, megéri-e Neked is a profi használtautó-fotózás.</p>
 			<div class="case-study">
 				<h3 class="case-study__title">Így keresett Anna 200.000 Ft-ot a használt autó fotózással</h3>
 				<article>
-					<p>Amikor Anna elhatározta, hogy eladja a kis Swiftjét, bizonytalan volt. Tudta, hogy nem újszerű, de szerette volna tisztességes áron továbbadni. <strong>Reálisan 900.000 Ft</strong>-ot remélt érte, és úgy gondolta, ha 1 millióért felrakja, úgyis lesz valaki, aki lealkudja 900-ra.</p>
-					<p>A használt autó fotózás után azonban megváltozott benne valami. A képeket látva magabiztosabb lett, és úgy érezte: „Ez az autó ettől igenis többet ér”. Felbátorodva a képeken, <strong>1,1 MFt-ért tette fel</strong> a hirdetést.</p>
-					<p>Két nap múlva már nem volt miről gondolkodni: <strong>az autót elvitték, méghozzá <span class="text-green">alku nélkül</span></strong>. Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte.</p>
-					<p>A profi fotó nem csak az autót mutatta meg jobb fényben, hanem Annának is önbizalmat adott. Ez lett a különbség a <em>„jó lenne 900-ért eladni”</em> és az <em>„elkelt 1 millió 1-ért”</em> között.</p>
+					<p>Amikor Anna elhatározta, hogy eladja a kis Swiftjét, bizonytalan volt. Tudta, hogy nem újszerű, de szerette volna tisztességes áron továbbadni. <strong>Reálisan 900.000 Ft</strong>-ot remélt érte, és úgy gondolta, ha 1 millióért felrakja, akkor talán lesz valaki, aki lealkudja 900-ra.</p>
+					<p>A használt autó fotózás után már aznap felrakta az új, profi képeket, és húzott is egy merészet a képek láttán. Azt mondta, hogy <em>„ez az autó ettől igenis többet ér”</em>, majd felrakta a hirdetést <strong>1.100.000</strong> Forintért.</p>
+					<p><strong>Két napon belül el is vitték az autóját, méghozzá <span class="text-green">alku nélkül</span></strong>. Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte.</p>
+					<p>A profi fotó nem csak az autót mutatta meg jobb fényben, hanem Annának is önbizalmat adott. Ez volt a különbség a <em>“hátha elmegy 900-ért”</em> és az <em>“1,1 millióért vitték el”</em> között.</p>
 				</article>
 				<figure>
 					<img class="case-study__image" src="/assets/images/case-study-proof.webp" alt="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte." title="Anna 200.000 Forinttal többért adta el a Swifjét, mint ahogy eredetileg tervezte." width="580" height="550" loading="lazy" decoding="async" fetchpriority="low">
@@ -189,7 +209,7 @@ title: Használt Autó Fotózás Budapest
 				</figure>
 			</div>
 			<div class="button-and-link">
-				<a class="btn" href="#kapcsolat">Ez igen, csináljuk!</a>
+				<a class="btn" href="#kapcsolat">Szeretném kipróbálni</a>
 				<a href="#galeria">Megnéznék pár autós fotót</a>
 			</div>
 		</div>
@@ -197,7 +217,7 @@ title: Használt Autó Fotózás Budapest
 
 	<section id="galeria" class="section">
 		<div class="container">
-			<h2 class="section__title">Minden <del>autóból</del> <ins>járműből</ins> kihozom a maximumot</h2>
+			<h2 class="section__title">Minden autó más, de mindegyik megérdemli, hogy a legjobban nézzen ki.</h2>
 			<p>Teljesen mindegy, hogy városi kisautód, SUV-d, családi kombid vagy épp az álomautód szeretnél eladni, profi fotókkal mindig könnyebb. A használt autó fotózással az a célom, hogy a hirdetésed kitűnjön, és a vevőd már a képeken beleszeressen a kocsidba. Íme néhány példa a munkáimból.</p>
 			<section class="gallery">
 				{% for image in gallery %}
@@ -233,7 +253,7 @@ title: Használt Autó Fotózás Budapest
 			<p>Nem kell most azonnal döntened. Írd meg nyugodtan, hogy érdeklődsz, és megbeszéljük a részleteket telefonon.</p>
 			<div class="contact-grid">
 				<div>
-					<h3>Töltsd ki az űrlapot, és visszahívlak:</h3>
+					<h3>Visszahívlak, és megnézzük, megéri-e neked is:</h3>
 					<form class="form" name="kapcsolat" method="POST" action="/koszonom" netlify netlify-honeypot="bot-field">
 						<input type="hidden" name="form-name" value="kapcsolat">
 						<div class="form__group">
@@ -252,7 +272,7 @@ title: Használt Autó Fotózás Budapest
 							<label class="form__label" for="bot-field">Ne töltsd ki, ha ember vagy!</label>
 							<input class="form__input" type="text" id="bot-field" name="bot-field">
 						</div>
-						<p class="form__disclaimer"><small><i class="fas fa-info-circle text-yellow"></i>&nbsp; Az adataidat kizárólag a kapcsolatfelvételhez használom, harmadik félnek nem adom tovább.</small></p>
+						<p class="form__disclaimer"><small><i class="fas fa-info-circle text-yellow"></i>&nbsp; Nem adom át senkinek az adataidat, csak visszahívlak megbeszélni a részleteket.</small></p>
 						<button class="form__button btn" type="submit" onclick="if(window.fbq){fbq('track','Lead',{form:'visszahivas'});}">Visszahívást kérek</button>
 					</form>
 				</div>
