--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@ layout: base.html
 title: Használt Autó Fotózás Budapest
 ---
 
-<link rel="preload" href="/assets/images/before/before-giulia.webp" as="image" type="image/webp">
-<link rel="preload" href="/assets/images/after/after-giulia.webp" as="image" type="image/webp">
+<link rel="preload" href="/assets/images/before/before-mondeo.webp" as="image" type="image/webp">
+<link rel="preload" href="/assets/images/after/after-mondeo.webp" as="image" type="image/webp">
 
 <main>
 	<header class="section hero">
@@ -154,8 +154,8 @@ title: Használt Autó Fotózás Budapest
 							Gyorsabb, stresszmentesebb eladás
 						</li>
 					</ul>
-					<span class="label">Őszi akció! 🍂</span>
-					<p class="plan__price plan__price--new h1"><ins>29.990 Ft</ins></p>
+					<span class="label">Novemberi kedvezmény!</span>
+					<p class="plan__price plan__price--new h1"><ins>27.900 Ft</ins></p>
 					<p><strong class="text-light">A legkisebb befektetés, ami a legtöbbet hozza az autód eladásából.</strong></p>
 					<p class="plan__disclaimer">Ennyi az egész: hozd el tisztán az autót, a többit én intézem. Egy óra alatt meg is vagyunk a fotózással, és már aznap hirdetheted is az autódat az új képekkel.</p>
 				</div>
